Refactor templates to use dynamic platform name and location
- Updated 'editar_solicitud.html' to include a unit selection dropdown for quantity and pre-select values.
- Modified 'footer.html' to replace static platform name with a dynamic variable.
- Changed 'head.html' and 'head_admin.html' to use dynamic platform name in meta description and title.
- Updated 'header.html' and 'header_admin.html' to reflect dynamic platform name in the navbar.
- Adjusted 'index.html' to use dynamic platform location and city in the introductory text.
- Changed 'login.html' to display dynamic platform name in the login header.
- Updated 'mercado.html' to reflect dynamic platform location in the market description.
- Modified 'privacidad.html' to use dynamic platform name and support email.
- Refactored 'registro.html' to include dynamic platform name and city in the registration form.
- Updated 'terminos.html' to reflect dynamic platform name and current date.